# apt

./: .dockerignore  .gitignore  COMMIT_MESSAGE.md  Dockerfile  GETTING_STARTED.md  LICENSE  README.md  STRUCTURE.md  aptcli.py  compact_ui_test.yml  conftest.py  distributed_k6_load_test.yml  distributed_ui_performance_test.yml  docker-compose.yml  docker-quickstart.sh  multi_region_api_monitoring.yml  performance_scripts.py  push-to-github.sh  pytest.ini  quick_start_agent_test.yml  requirements.txt  results.jtl  setup.py  weighted_load_distribution_test.yml
agent_scripts/: README.md  database_check.py  validate_performance.py
apt-desktop/: README.md  vite.config.ts
apt-desktop/src-tauri/: Cargo.toml  tauri.conf.json
browser-agent/: README.md  tsconfig.json
config/: extensions_config.yml  performance_config.yml
custom_aggregators/: selective_iteration_aggregator.py  workflow_aggregator.py
docker/: prometheus.yml
docs/: ADVANCED_FEATURES.md  AGENT_DEPLOYMENT.md  AGENT_USAGE.md  APTCLI_GUIDE.md  CLI_INSTALLATION.md  CLI_REFERENCE.md  DOCKER_USAGE.md  JMETER_PLUGINS.md  K6_JMETER_INSTALLATION.md  METRICS_AND_ITERATIONS.md  REAL_TIME_MONITORING.md  TEMPORAL_TESTING.md  UNIFIED_TESTING.md  WORKFLOW_AND_CUSTOM_METRICS.md  architecture.md
examples/: 01_simple_api_test.yml  02_hybrid_multi_tool.yml  03_multi_region_test.yml  04_production_monitoring.yml  05_selective_iterations.yml  06_external_agent_code.yml  07_complete_showcase.yml  08_advanced_agents.yml  09_async_distributed_browsers.yml  10_weighted_load_distribution.yml  README.md  agent_test.yml  (+3 more)
(+57 files in other folders)
